--- a/security.html
+++ b/security.html
@@ -45,7 +45,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
+<h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -53,7 +53,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/crowdstrike/job/oVQCafwh'>CrowdStrike Careers - Security Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/crowdstrike/job/oVQCafwh'>CrowdStrike Careers - Security Analyst</a></h5> 
 <p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -65,11 +65,11 @@
 <p><span class="badge badge-light">Chennai</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trustwave/job/oofDafwa'>Security Analyst - SOC | Trustwave Careers</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trustwave/job/oofDafwa'>Security Analyst - SOC | Trustwave Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/1cyaftceqe6wmxu18gobqzhnwe'>Application Security Engineer | Shulman Fleming &amp; Partners</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/1cyaftceqe6wmxu18gobqzhnwe'>Application Security Engineer | Shulman Fleming &amp; Partners</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -98,11 +98,11 @@ to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zycus-1.workable.com/j/0AB165E01E'>Zycus - Jobs: Application Security Architect (Java) - Apply online</a></h5> 
+<h5><a href='https://zycus-1.workable.com/j/0AB165E01E'>Zycus - Jobs: Application Security Architect (Java) - Apply online</a></h5> 
 <p><span class="badge badge-light">Maharashtra, India</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zycus-1.workable.com/j/6C8ACDAE50'>Zycus - Jobs: Application Security Architect (Java) - Apply online</a></h5> 
+<h5><a href='https://zycus-1.workable.com/j/6C8ACDAE50'>Zycus - Jobs: Application Security Architect (Java) - Apply online</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -227,7 +227,7 @@ Loading.</p>
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/E7AEE43F1B'>QuintoAndar - Jobs: Software Security Engineer - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/E7AEE43F1B'>QuintoAndar - Jobs: Software Security Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Software Security Engineer at QuintoAndar.</p>
 <hr/>
@@ -260,7 +260,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/4tryot1s1dtudztboke6nxntkw'>Security Architect  | JFR Staffing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/4tryot1s1dtudztboke6nxntkw'>Security Architect  | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -342,7 +342,7 @@ today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 8, 2019 ... Apply online for the job of Information Security Analyst at Davy.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://edc.referrals.selectminds.com/jobs/sr-security-certification-engineer-2237'>Sr Security Certification Engineer - Entrust Datacard Careers</a></h5> 
+<h5><a href='https://edc.referrals.selectminds.com/jobs/sr-security-certification-engineer-2237'>Sr Security Certification Engineer - Entrust Datacard Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -442,7 +442,7 @@ lead the Mixed-Signal Design Group. This is an electrical design engineering?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wfcareers.referrals.selectminds.com/jobs/information-security-architect-1944'>Information Security Architect - Westfield Careers</a></h5> 
+<h5><a href='https://wfcareers.referrals.selectminds.com/jobs/information-security-architect-1944'>Information Security Architect - Westfield Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
